# shmem-ipc

./: Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: tokio-async-design.md
examples/: bench.rs  named_pipe_bench.rs  stress.rs  textil_bench.rs  textil_pattern.rs  tokio_bench.rs  tokio_textil_bench.rs  unix_socket_bench.rs
src/: channel.rs  connection.rs  error.rs  header.rs  lib.rs  listener.rs  ring.rs  wait.rs
src/platform/: linux.rs  mod.rs  windows.rs
src/tokio/: bridge.rs  listener.rs  mod.rs
tests/: channel_test.rs  listener_test.rs  tokio_test.rs
