[package]
name = "shmem-ipc"
version = "0.1.0"
edition = "2024"
description = "Production-quality shared memory IPC with lock-free SPSC ring buffers"

[features]
default = []
tokio = ["dep:tokio"]

[dependencies]
memmap2 = "0.9"
tokio = { version = "1", optional = true, features = ["io-util", "macros", "net", "rt", "rt-multi-thread", "sync", "time"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_System_Threading",
] }

[[example]]
name = "tokio_bench"
required-features = ["tokio"]

[[example]]
name = "tokio_textil_bench"
required-features = ["tokio"]
